# python-simulation-retirement

./: .gitignore  01_success.py  02_simulation_lines.py  03_historical_value.py  04_tuning.py  04_tuning_improved.py  05_target_year_budget.py  06_hedge.py  AGENTS.md  ALL_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  FIXES_APPLIED.md  QUICK_START.md  RANDOM_SEED_EXPLAINED.md  README.md  TUNING_ANALYSIS.md  TUNING_COMPARISON.md  TUNING_IMPROVEMENTS.md  common.py  common_test.py  fixes_validation_test.py  pyproject.toml  pyrightconfig.json  random_utils.py  simulation_convergence.py  simulation_reliability_test.py  simulation_scenario.py  test_06_hedge.py  test_integration.py  test_tuning_improvements.py  tuning_run_results.py
results/: hedge_optuna_smoke_summary.json  hedge_optuna_v10_summary.json  hedge_optuna_v11_summary.json  hedge_optuna_v12_summary.json  hedge_optuna_v13_summary.json  hedge_optuna_v14_summary.json  hedge_optuna_v1_summary.json  hedge_optuna_v5_summary.json  hedge_optuna_v6_summary.json  hedge_optuna_v8_summary.json  hedge_optuna_v9_summary.json  retirement_tuning_study_v126_meta.json  retirement_tuning_study_v127_meta.json  retirement_tuning_study_v129_meta.json  retirement_tuning_study_v130_meta.json  retirement_tuning_study_v131_meta.json  target_budget_study_v10_meta.json  target_budget_study_v12_meta.json  target_budget_study_v13_meta.json  target_budget_study_v14_meta.json  target_budget_study_v16_meta.json  target_budget_study_v17_meta.json  target_budget_study_v18_meta.json  target_budget_study_v19_meta.json  target_budget_study_v21_meta.json  (+3 more)
(+1 files in other folders)
